# newdna-juce

./: .gitignore  CMakeLists.txt  README.md
plugins/: CMakeLists.txt
plugins/dsp-reverb/: CMakeLists.txt
plugins/dsp-reverb/include/: EditorContent.h  ReverbEditor.h  ReverbProcessor.h
plugins/dsp-reverb/source/: EditorContent.cpp  EditorLnf.cpp  ReverbEditor.cpp  ReverbProcessor.cpp
plugins/reference/: CMakeLists.txt
plugins/reference/include/: CMakeLists.txt
test/: CMakeLists.txt
